examples/test/testpolicy14260.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14260
  namespace: namespace301
spec:
  podSelector:
    matchLabels:
      key43: value30
      key14: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value37
          key48: value35
          key10: value4
      podSelector:
        matchLabels:
          key48: value5
          key37: value13
          key4: value26
